--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,14 @@ h1, h2, h3, h4, h5, h6 {
     color: #031b4f;
     padding: 10px 0;
 }
+#block-position {
+    position: relative;
+}
+
+#google-logo-button img {
+    height: 15px;
+    display: inline-block;
+    position: absolute;
+    left: 10px;
+    top: 6px;
+}
