--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 /* COMMON */
+body {
+    font-family: Inter-Regular,"system-ui",-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Helvetica,Arial,"sans-serif";
+    min-width: 320px;
+}
+
 ul {
     list-style-type: none;
 }
@@ -15,12 +20,21 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 9px;
     vertical-align: middle;
 }
+
+.right-chevron {
+    font-size: 8px;
+}
+
 .white-text {
     color: white;
 }
 
 .lightblue-text {
     color: #2485fd;
+}
+
+.grey-text {
+    color: #5b6987;
 }
 /* HEADER */
 .top-nav {
@@ -47,6 +61,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .burger-menu {
     color: #2485fd;
+    line-height: 35px;
 }
 
 .top-nav .menu-right .btn {
@@ -65,10 +80,10 @@ h1, h2, h3, h4, h5, h6 {
     max-width: 80%;
 }
 
-.bg-white {
+.banner .bg-white {
     background-color: white;
     margin: 30px 0;
-    padding: 5px 20px;
+    padding: 5px 30px;
 }
 
 .banner .bg-white p:last-child {
@@ -86,3 +101,36 @@ h1, h2, h3, h4, h5, h6 {
     left: 10px;
     top: 6px;
 }
+
+/* MAIN */
+/* Software-list */
+main .software-list {
+    background-color: #f3f5f9;
+    padding: 30px 0;
+}
+
+main .software-list ul li {
+    display: inline-block;
+    width: calc( ( 100% / 6 ) - 16px);
+    padding-right: 10px;
+    text-align: center;
+}
+
+main .software-list ul li img {
+    width: 100%;
+    height: auto;
+}
+
+
+@media all and (max-width: 767px){
+    main .software-list ul li {
+      width: calc( ( 100% / 2 ) - 16px);
+    }
+
+    main .software-list .software-exposure li img {
+        width: 50%;
+        height: auto;
+    }
+    
+}
+
