--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
 h1, h2, h3, h4, h5, h6 {
     color: #031b4f;
 }
@@ -36,6 +40,10 @@ h1, h2, h3, h4, h5, h6 {
 .grey-text {
     color: #5b6987;
 }
+
+.block-pad {
+    padding: 10px 0;
+}
 /* HEADER */
 .top-nav {
     padding: 10px 0;
@@ -50,13 +58,12 @@ h1, h2, h3, h4, h5, h6 {
     display: inline-block;
     vertical-align: middle;
     line-height: 35px;
-
+    padding-right: 10px;
 }
 
 .top-nav ul li a {
     color: #2485fd;
-    padding-right: 10px;
-    font-size: 12px
+    font-size: 13px
 }
 
 .burger-menu {
@@ -122,7 +129,31 @@ main .software-list ul li img {
 }
 
 
+
+
+ /* Specification */
+ .specification {
+    padding: 30px 0 ;
+ }
+ .specification-content {
+    margin-top: 40px;
+ }
+
+.specification .menu-left .menu-content {
+    border-left: 1px solid;
+    padding-left: 10px; 
+    display: inline-block;
+}
+
+.specification .menu-left .menu-content li {
+    padding: 10px 0;
+}
+
+
+/* Media Query xs */
 @media all and (max-width: 767px){
+    /* MAIN */
+    /* Software list */
     main .software-list ul li {
       width: calc( ( 100% / 2 ) - 16px);
     }
@@ -132,5 +163,13 @@ main .software-list ul li img {
         height: auto;
     }
     
-}
+    /* Specification */
+    .specification .specification-content .menu-left {
+        text-align: left;
+        margin-bottom: 20px;
+    }
 
+    .specification .specification-content .menu-right img {
+        padding-top: 15px;
+    }
+}
