--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ h1, h2, h3, h4, h5, h6 {
 .top-nav ul li {
     display: inline-block;
     vertical-align: middle;
-    line-height: 35px;
+    padding-top: 7px;
     padding-right: 10px;
 }
 
