--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,52 @@ footer .lists-footer a{
     display: block;
 }
 
+/* Fixed */
+.fixed-image {
+    width: 80px;
+    position: fixed;
+    bottom: 5%;
+    right: 5%;
+    z-index: 1;
+    
+}
+
+.fixed-chat {
+    background: white;
+    width: 30%;
+    position: fixed;
+    bottom: 5%;
+    right: 15%;
+    z-index: 1;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+.fixed-image img {
+    padding: 10px;
+    border-radius: 5px;
+    background: linear-gradient(to top left, #001e9a, #001e9a);
+}
+
+.fixed-image .round {
+    background-color: red;
+    border: 4px solid white;
+    color: white;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    width: 30px;
+    height: 30px;
+    text-align: center;
+}
+
+.support-chat::after {
+    content: "f054";
+    color: white;
+    background-color: white;
+    font-size: 10px;
+}
+
 /* Media Query XS */
 @media all and (max-width: 767px){
     /* MAIN */
@@ -352,23 +398,46 @@ footer .lists-footer a{
     .required-features .required-features-content img {
        padding-top: 15px;
     }
+
+    footer .lists-footer .menu-list {
+        padding-top: 20px;
+    }
+
+    .fixed-image {
+        bottom: 25%;
+        left: 5%;
+    }
+
+    .fixed-chat {
+        left: 5%;
+    }
 }
 
 /* Media Query SM*/
 @media all and (min-width: 768px) and (max-width: 991px) {
     /* Slide section 1 chevron */
-.slide-section .content-col .left-chevron,
-.slide-section .content-col .right-chevron {
-    line-height: 205px;
-    font-size: 25px;
-}
-/* End Slide section 2 chevron */
+    .slide-section .content-col .left-chevron,
+    .slide-section .content-col .right-chevron {
+        line-height: 205px;
+        font-size: 25px;
+    }
+    /* End Slide section 2 chevron */
 
-/* Slide section 2 chevron */
-.slide-section-two .content-col .left-chevron,
-.slide-section-two .content-col .right-chevron {
-    line-height: 215px;
-    font-size: 25px;
-}
-/* End Slide section 2 chevron */
+    /* Slide section 2 chevron */
+    .slide-section-two .content-col .left-chevron,
+    .slide-section-two .content-col .right-chevron {
+        line-height: 215px;
+        font-size: 25px;
+    }
+    /* End Slide section 2 chevron */
+
+    .fixed-image {
+        bottom: 25%;
+        left: 5%;
+    }
+
+    .fixed-chat {
+        left: 5%;
+    }
+
 }
