--- a/css/style.css
+++ b/css/style.css
@@ -413,6 +413,7 @@ footer .lists-footer a{
     .fixed-image {
         bottom: 17%;
         left: 5%;
+        margin-bottom: 5px;
     }
 
     .fixed-chat {
@@ -442,6 +443,7 @@ footer .lists-footer a{
     .fixed-image {
         bottom: 15%;
         left: 5%;
+        margin-bottom: 5px;
     }
 
     .fixed-chat {
